# netlify-serverless-example-small

./: .gitignore  Cargo.toml  Makefile  README.md  netlify.toml
crates/hello/: Cargo.toml
functions/hello/src/: main.rs
public/: index.html
src/: main.rs
