[package]
name = "netlify-serverless-example-small"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2018"

[[bin]]
name = "ferris"
path = "src/main.rs"
test = false
bench = false

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
tokio = { version = "0.3.5", features = ["full"] }
serde_json = "1.0.60"
netlify_lambda_http = "0.1.1"
