[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.6.3"
http = "0.2.5"
lambda_http = "0.5.1"
lambda_runtime = "0.5.1"
serde_json = "1.0.67"
tokio = { version = "1.9.0", features = ["macros"] }
